raffia/tests/error/scss/at-rule/include/invalid-arglist.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ invalid-arglist.scss:1:32
  │
1 │ @include mixin() using ($arg1: ) {}
  │                                ^


